// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Accordion With content 1`] = `
<div
  className="ui container"
>
  <div
    className="Accordion Accordion--close"
  >
    <div
      className="Accordion__Title"
      onClick={[Function]}
    >
      <div
        className="Accordion__Title__Content"
      >
        <span
          className="dcl stats"
        >
          <div
            className="ui sub header"
          >
            Accordion sub title
          </div>
          <div
            className="ui header"
          >
            Accordion title
          </div>
        </span>
      </div>
      <div
        className="Accordion__Title__Description"
      >
        <p
          className="dg Paragraph Paragraph--secondary Paragraph--small"
        >
          Accordion description
        </p>
      </div>
      <div
        className="Accordion__Title__Action"
      >
        <svg
          height="48"
          viewBox="0 0 48 48"
          width="48"
        >
          <g
            fill="none"
            fillRule="evenodd"
            opacity=".32"
          >
            <path
              d="M0 0H48V48H0z"
            />
            <path
              d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
              fill="#736E7D"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="Accordion__Content"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div>
        <div
          className="dg ImgFixed ImgFixed--wide"
          style={
            Object {
              "backgroundColor": "transparent",
              "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/13/111/map.png\\")",
              "backgroundPosition": "center center",
              "backgroundSize": "cover",
            }
          }
        >
          <img
            height="1"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
            width="2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Accordion With content and Card 1`] = `
<div
  className="ui card"
  onClick={[Function]}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="content"
  >
    <div
      className="Accordion Accordion--close"
    >
      <div
        className="Accordion__Title"
        onClick={[Function]}
      >
        <div
          className="Accordion__Title__Content"
        >
          <span
            className="dcl stats"
          >
            <div
              className="ui sub header"
            >
              Accordion sub title
            </div>
            <div
              className="ui header"
            >
              Accordion title
            </div>
          </span>
        </div>
        <div
          className="Accordion__Title__Description"
        >
          <p
            className="dg Paragraph Paragraph--secondary Paragraph--small"
          >
            Accordion description
          </p>
        </div>
        <div
          className="Accordion__Title__Action"
        >
          <svg
            height="48"
            viewBox="0 0 48 48"
            width="48"
          >
            <g
              fill="none"
              fillRule="evenodd"
              opacity=".32"
            >
              <path
                d="M0 0H48V48H0z"
              />
              <path
                d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
                fill="#736E7D"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        className="Accordion__Content"
        style={
          Object {
            "height": 0,
          }
        }
      >
        <div>
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/138/29/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Accordion Without content 1`] = `
<div
  className="ui container"
>
  <div
    className="Accordion Accordion--close"
  >
    <div
      className="Accordion__Title"
      onClick={[Function]}
    >
      <div
        className="Accordion__Title__Content"
      >
        <span
          className="dcl stats"
        >
          <div
            className="ui sub header"
          >
            Accordion sub title
          </div>
          <div
            className="ui header"
          >
            Accordion title
          </div>
        </span>
      </div>
      <div
        className="Accordion__Title__Description"
      >
        <p
          className="dg Paragraph Paragraph--secondary Paragraph--small"
        >
          Accordion description
        </p>
      </div>
    </div>
    <div
      className="Accordion__Content"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Accordion Without content and Card 1`] = `
<div
  className="ui card"
  onClick={[Function]}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="content"
  >
    <div
      className="Accordion Accordion--close"
    >
      <div
        className="Accordion__Title"
        onClick={[Function]}
      >
        <div
          className="Accordion__Title__Content"
        >
          <span
            className="dcl stats"
          >
            <div
              className="ui sub header"
            >
              Accordion sub title
            </div>
            <div
              className="ui header"
            >
              Accordion title
            </div>
          </span>
        </div>
        <div
          className="Accordion__Title__Description"
        >
          <p
            className="dg Paragraph Paragraph--secondary Paragraph--small"
          >
            Accordion description
          </p>
        </div>
      </div>
      <div
        className="Accordion__Content"
        style={
          Object {
            "height": 0,
          }
        }
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Carousel As progress 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/94/80/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/86/54/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/21/96/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev disabled"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Carousel Carousel 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/16/32/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/39/91/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/148/89/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Carousel Carousel time 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/1/78/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/139/70/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/7/57/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Image/ImgFixed Dimensions 1`] = `
<div
  className="ui grid"
>
  <div
    className="row"
  >
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="wide"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="standard"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--standard"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="3"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAADCAYAAAC09K7GAAAAD0lEQVR4AWNwL/BBwYQFADuuDCW4Y5knAAAAAElFTkSuQmCC"
          width="4"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="square"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--square"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR4AWNwL/BhAAADCQEEiiqnjQAAAABJRU5ErkJggg=="
          width="1"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="vertical"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--vertical"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="3"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAADCAYAAAC56t6BAAAAD0lEQVR4AWNwL/ABY0wGAFT5BhPIHHvgAAAAAElFTkSuQmCC"
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="circle"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--circle"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR4AWNwL/BhAAADCQEEiiqnjQAAAABJRU5ErkJggg=="
          width="1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Image/ImgFixed sizes 1`] = `
<div
  className="ui grid"
>
  <div
    className="row"
  >
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="initial"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "initial",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="cover"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="contain"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "contain",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="75%"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "75%",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="50%"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "50%",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="25%"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "25%",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal/WrongNetworkModal Multi Network Support 1`] = `
<div>
  <div>
    <div
      id="ID0"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Modal/WrongNetworkModal Switch Multi Network 1`] = `
<div>
  <div>
    <div
      id="ID1"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Modal/WrongNetworkModal Switch Network 1`] = `
<div>
  <div>
    <div
      id="ID2"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Modal/WrongNetworkModal Wrong Network 1`] = `
<div>
  <div>
    <div
      id="ID3"
    />
  </div>
</div>
`;

exports[`Storyshots Components/User/Avatar Automatic background colors 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--0"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--1"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--2"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--3"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--4"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--5"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--6"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--7"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--8"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--9"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--a"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--b"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--c"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--d"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--e"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--f"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
</div>
`;

exports[`Storyshots Components/User/Avatar Avatar image fallback 1`] = `
<div
  className="ui center aligned grid"
>
  <div
    className="row"
  >
    <div
      className="four wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          default
        </pre>
      </pre>
      <img
        className="dg dcl-avatar dcl-avatar--full dcl-avatar--f"
        height="128"
        loading="lazy"
        onError={[Function]}
        src="https://decentraland.org/images/male.png"
        width="128"
      />
    </div>
    <div
      className="two wide mobile column"
    />
    <div
      className="four wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          decentraland user
        </pre>
      </pre>
      <img
        className="dg dcl-avatar dcl-avatar--full dcl-avatar--0"
        height="128"
        loading="lazy"
        onError={[Function]}
        src="https://decentraland.org/images/male.png"
        width="128"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/User/Avatar Custom sources 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://peer-lb.decentraland.org/content/contents/QmPbEZrpFB1kwe7DAU6A3v56PFz6NcgNziFN3XNX6gABE6"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://peer-lb.decentraland.org/content/contents/QmYM9YEd4T9veJNRUUXD75hSh3QKpeg3XcVzXcKsUKNDKB"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://peer-lb.decentraland.org/content/contents/QmPHSo4hMz4xnJNuzNJkT4ddxsYznHLCRzzRTuGbemUFLT"
    width="128"
  />
</div>
`;

exports[`Storyshots Components/User/Avatar Loading state 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar-- dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--0 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--1 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--2 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--3 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--4 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--5 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--6 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--7 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--8 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--9 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--a dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--b dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--c dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--d dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--e dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--f dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
</div>
`;

exports[`Storyshots Components/User/Avatar Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--mini dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--tiny dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--small dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--medium dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--large dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--big dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--huge dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--full dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
</div>
`;
